# mnist_neural_net

./: CMakeLists.txt  README.md  main.cpp  neural_net_qt.pro
network/: Network.cpp  Network.h  Nodes.cpp  Nodes.h  NodesLayer.cpp  NodesLayer.h
utils/: MathNN.cpp  MathNN.h  MnistReader.cpp  mnist.cpp  mnist.h  mnistreader.h
